eve-py/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    GUARD

Grammar

Rule 0     S' -> input
Rule 1     input -> MODULE NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
Rule 2     input -> MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y
Rule 3     input -> input input
Rule 4     input -> input PROPF prop_form
Rule 5     input -> input PAYOFFS payoff_list
Rule 6     payoff_list -> payoff_tuple
Rule 7     payoff_list -> payoff_list payoff_tuple
Rule 8     payoff_tuple -> DCOL LB NAME COMMA NAME COMMA NUMBER RB SEMICOLON
Rule 9     payoff_tuple -> DCOL LB error COMMA NAME COMMA NUMBER RB SEMICOLON
Rule 10    var_y -> NAME
Rule 11    var_y -> var_y COMMA var_y
Rule 12    init_y -> DCOL init_command
Rule 13    init_y -> init_y DCOL init_command
Rule 14    init_command -> init_condition ASSIGN init_next_state
Rule 15    init_condition -> TRUE
Rule 16    init_next_state -> NAME NEXT EQUALS TRUE
Rule 17    init_next_state -> NAME NEXT EQUALS FALSE
Rule 18    init_next_state -> init_next_state COMMA init_next_state
Rule 19    init_next_state -> init_next_state SEMICOLON
Rule 20    update_command -> update_condition ASSIGN update_next_state
Rule 21    update_y -> DCOL update_command
Rule 22    update_y -> update_y DCOL update_command
Rule 23    update_condition -> formula_guard
Rule 24    update_condition -> update_condition COMMA update_condition
Rule 25    formula_guard -> NAME
Rule 26    formula_guard -> TRUE
Rule 27    formula_guard -> FALSE
Rule 28    formula_guard -> formula_guard OR formula_guard
Rule 29    formula_guard -> formula_guard AND formula_guard
Rule 30    formula_guard -> formula_guard IMPLIES formula_guard
Rule 31    formula_guard -> formula_guard IFF formula_guard
Rule 32    formula_guard -> NOT formula_guard
Rule 33    formula_guard -> LB formula_guard RB
Rule 34    update_next_state -> NAME NEXT EQUALS formula_assign
Rule 35    update_next_state -> update_next_state COMMA update_next_state
Rule 36    update_next_state -> update_next_state SEMICOLON
Rule 37    formula_assign -> NAME
Rule 38    formula_assign -> TRUE
Rule 39    formula_assign -> FALSE
Rule 40    formula_assign -> formula_assign OR formula_assign
Rule 41    formula_assign -> formula_assign AND formula_assign
Rule 42    formula_assign -> formula_assign IMPLIES formula_assign
Rule 43    formula_assign -> formula_assign IFF formula_assign
Rule 44    formula_assign -> NOT formula_assign
Rule 45    formula_assign -> LB formula_assign RB
Rule 46    goal_form -> DCOL gf SEMICOLON
Rule 47    gf -> NAME
Rule 48    gf -> TRUE
Rule 49    gf -> FALSE
Rule 50    gf -> gf OR gf
Rule 51    gf -> gf AND gf
Rule 52    gf -> gf IMPLIES gf
Rule 53    gf -> gf IFF gf
Rule 54    gf -> G gf
Rule 55    gf -> F gf
Rule 56    gf -> X gf
Rule 57    gf -> gf U gf
Rule 58    gf -> NOT gf
Rule 59    gf -> LB gf RB
Rule 60    prop_form -> DCOL pf SEMICOLON
Rule 61    pf -> NAME
Rule 62    pf -> TRUE
Rule 63    pf -> FALSE
Rule 64    pf -> pf OR pf
Rule 65    pf -> pf AND pf
Rule 66    pf -> pf IMPLIES pf
Rule 67    pf -> pf IFF pf
Rule 68    pf -> G pf
Rule 69    pf -> F pf
Rule 70    pf -> X pf
Rule 71    pf -> pf U pf
Rule 72    pf -> NOT pf
Rule 73    pf -> LB pf RB

Terminals, with rules where they appear

AND                  : 29 41 51 65
ASSIGN               : 14 20
COMMA                : 8 8 9 9 11 18 24 35
COMMENT              : 
CONTROL              : 1 2
DCOL                 : 8 9 12 13 21 22 46 60
ENVIRONMENT          : 2
EQUALS               : 16 17 34
F                    : 55 69
FALSE                : 17 27 39 49 63
G                    : 54 68
GOAL                 : 1
GUARD                : 
IFF                  : 31 43 53 67
IMPLIES              : 30 42 52 66
INIT                 : 1 2
LB                   : 8 9 33 45 59 73
MODULE               : 1 2
NAME                 : 1 8 8 9 10 16 17 25 34 37 47 61
NEXT                 : 16 17 34
NOT                  : 32 44 58 72
NUMBER               : 8 9
OR                   : 28 40 50 64
PAYOFFS              : 5
PROPF                : 4
RB                   : 8 9 33 45 59 73
SEMICOLON            : 8 9 19 36 46 60
TRUE                 : 15 16 26 38 48 62
U                    : 57 71
UPDATE               : 1 2
X                    : 56 70
error                : 9

Nonterminals, with rules where they appear

formula_assign       : 34 40 40 41 41 42 42 43 43 44 45
formula_guard        : 23 28 28 29 29 30 30 31 31 32 33
gf                   : 46 50 50 51 51 52 52 53 53 54 55 56 57 57 58 59
goal_form            : 1
init_command         : 12 13
init_condition       : 14
init_next_state      : 14 18 18 19
init_y               : 1 2 13
input                : 3 3 4 5 0
payoff_list          : 5 7
payoff_tuple         : 6 7
pf                   : 60 64 64 65 65 66 66 67 67 68 69 70 71 71 72 73
prop_form            : 4
update_command       : 21 22
update_condition     : 20 24 24
update_next_state    : 20 35 35 36
update_y             : 1 2 22
var_y                : 1 2 11 11

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> . MODULE NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
    (2) input -> . MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y
    (3) input -> . input input
    (4) input -> . input PROPF prop_form
    (5) input -> . input PAYOFFS payoff_list

    MODULE          shift and go to state 2

    input                          shift and go to state 1

state 1

    (0) S' -> input .
    (3) input -> input . input
    (4) input -> input . PROPF prop_form
    (5) input -> input . PAYOFFS payoff_list
    (1) input -> . MODULE NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
    (2) input -> . MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y
    (3) input -> . input input
    (4) input -> . input PROPF prop_form
    (5) input -> . input PAYOFFS payoff_list

    PROPF           shift and go to state 4
    PAYOFFS         shift and go to state 5
    MODULE          shift and go to state 2

    input                          shift and go to state 3

state 2

    (1) input -> MODULE . NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
    (2) input -> MODULE . ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y

    NAME            shift and go to state 6
    ENVIRONMENT     shift and go to state 7


state 3

    (3) input -> input input .
    (3) input -> input . input
    (4) input -> input . PROPF prop_form
    (5) input -> input . PAYOFFS payoff_list
    (1) input -> . MODULE NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
    (2) input -> . MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y
    (3) input -> . input input
    (4) input -> . input PROPF prop_form
    (5) input -> . input PAYOFFS payoff_list

  ! shift/reduce conflict for PROPF resolved as shift
  ! shift/reduce conflict for PAYOFFS resolved as shift
  ! shift/reduce conflict for MODULE resolved as shift
    $end            reduce using rule 3 (input -> input input .)
    PROPF           shift and go to state 4
    PAYOFFS         shift and go to state 5
    MODULE          shift and go to state 2

  ! PROPF           [ reduce using rule 3 (input -> input input .) ]
  ! PAYOFFS         [ reduce using rule 3 (input -> input input .) ]
  ! MODULE          [ reduce using rule 3 (input -> input input .) ]

    input                          shift and go to state 3

state 4

    (4) input -> input PROPF . prop_form
    (60) prop_form -> . DCOL pf SEMICOLON

    DCOL            shift and go to state 9

    prop_form                      shift and go to state 8

state 5

    (5) input -> input PAYOFFS . payoff_list
    (6) payoff_list -> . payoff_tuple
    (7) payoff_list -> . payoff_list payoff_tuple
    (8) payoff_tuple -> . DCOL LB NAME COMMA NAME COMMA NUMBER RB SEMICOLON
    (9) payoff_tuple -> . DCOL LB error COMMA NAME COMMA NUMBER RB SEMICOLON

    DCOL            shift and go to state 12

    payoff_list                    shift and go to state 10
    payoff_tuple                   shift and go to state 11

state 6

    (1) input -> MODULE NAME . CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form

    CONTROL         shift and go to state 13


state 7

    (2) input -> MODULE ENVIRONMENT . CONTROL var_y INIT init_y UPDATE update_y

    CONTROL         shift and go to state 14


state 8

    (4) input -> input PROPF prop_form .

    PROPF           reduce using rule 4 (input -> input PROPF prop_form .)
    PAYOFFS         reduce using rule 4 (input -> input PROPF prop_form .)
    MODULE          reduce using rule 4 (input -> input PROPF prop_form .)
    $end            reduce using rule 4 (input -> input PROPF prop_form .)


state 9

    (60) prop_form -> DCOL . pf SEMICOLON
    (61) pf -> . NAME
    (62) pf -> . TRUE
    (63) pf -> . FALSE
    (64) pf -> . pf OR pf
    (65) pf -> . pf AND pf
    (66) pf -> . pf IMPLIES pf
    (67) pf -> . pf IFF pf
    (68) pf -> . G pf
    (69) pf -> . F pf
    (70) pf -> . X pf
    (71) pf -> . pf U pf
    (72) pf -> . NOT pf
    (73) pf -> . LB pf RB

    NAME            shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    G               shift and go to state 19
    F               shift and go to state 20
    X               shift and go to state 21
    NOT             shift and go to state 22
    LB              shift and go to state 23

    pf                             shift and go to state 15

state 10

    (5) input -> input PAYOFFS payoff_list .
    (7) payoff_list -> payoff_list . payoff_tuple
    (8) payoff_tuple -> . DCOL LB NAME COMMA NAME COMMA NUMBER RB SEMICOLON
    (9) payoff_tuple -> . DCOL LB error COMMA NAME COMMA NUMBER RB SEMICOLON

    PROPF           reduce using rule 5 (input -> input PAYOFFS payoff_list .)
    PAYOFFS         reduce using rule 5 (input -> input PAYOFFS payoff_list .)
    MODULE          reduce using rule 5 (input -> input PAYOFFS payoff_list .)
    $end            reduce using rule 5 (input -> input PAYOFFS payoff_list .)
    DCOL            shift and go to state 12

    payoff_tuple                   shift and go to state 24

state 11

    (6) payoff_list -> payoff_tuple .

    DCOL            reduce using rule 6 (payoff_list -> payoff_tuple .)
    PROPF           reduce using rule 6 (payoff_list -> payoff_tuple .)
    PAYOFFS         reduce using rule 6 (payoff_list -> payoff_tuple .)
    MODULE          reduce using rule 6 (payoff_list -> payoff_tuple .)
    $end            reduce using rule 6 (payoff_list -> payoff_tuple .)


state 12

    (8) payoff_tuple -> DCOL . LB NAME COMMA NAME COMMA NUMBER RB SEMICOLON
    (9) payoff_tuple -> DCOL . LB error COMMA NAME COMMA NUMBER RB SEMICOLON

    LB              shift and go to state 25


state 13

    (1) input -> MODULE NAME CONTROL . var_y INIT init_y UPDATE update_y GOAL goal_form
    (10) var_y -> . NAME
    (11) var_y -> . var_y COMMA var_y

    NAME            shift and go to state 26

    var_y                          shift and go to state 27

state 14

    (2) input -> MODULE ENVIRONMENT CONTROL . var_y INIT init_y UPDATE update_y
    (10) var_y -> . NAME
    (11) var_y -> . var_y COMMA var_y

    NAME            shift and go to state 26

    var_y                          shift and go to state 28

state 15

    (60) prop_form -> DCOL pf . SEMICOLON
    (64) pf -> pf . OR pf
    (65) pf -> pf . AND pf
    (66) pf -> pf . IMPLIES pf
    (67) pf -> pf . IFF pf
    (71) pf -> pf . U pf

    SEMICOLON       shift and go to state 29
    OR              shift and go to state 30
    AND             shift and go to state 31
    IMPLIES         shift and go to state 32
    IFF             shift and go to state 33
    U               shift and go to state 34


state 16

    (61) pf -> NAME .

    SEMICOLON       reduce using rule 61 (pf -> NAME .)
    OR              reduce using rule 61 (pf -> NAME .)
    AND             reduce using rule 61 (pf -> NAME .)
    IMPLIES         reduce using rule 61 (pf -> NAME .)
    IFF             reduce using rule 61 (pf -> NAME .)
    U               reduce using rule 61 (pf -> NAME .)
    RB              reduce using rule 61 (pf -> NAME .)


state 17

    (62) pf -> TRUE .

    SEMICOLON       reduce using rule 62 (pf -> TRUE .)
    OR              reduce using rule 62 (pf -> TRUE .)
    AND             reduce using rule 62 (pf -> TRUE .)
    IMPLIES         reduce using rule 62 (pf -> TRUE .)
    IFF             reduce using rule 62 (pf -> TRUE .)
    U               reduce using rule 62 (pf -> TRUE .)
    RB              reduce using rule 62 (pf -> TRUE .)


state 18

    (63) pf -> FALSE .

    SEMICOLON       reduce using rule 63 (pf -> FALSE .)
    OR              reduce using rule 63 (pf -> FALSE .)
    AND             reduce using rule 63 (pf -> FALSE .)
    IMPLIES         reduce using rule 63 (pf -> FALSE .)
    IFF             reduce using rule 63 (pf -> FALSE .)
    U               reduce using rule 63 (pf -> FALSE .)
    RB              reduce using rule 63 (pf -> FALSE .)


state 19

    (68) pf -> G . pf
    (61) pf -> . NAME
    (62) pf -> . TRUE
    (63) pf -> . FALSE
    (64) pf -> . pf OR pf
    (65) pf -> . pf AND pf
    (66) pf -> . pf IMPLIES pf
    (67) pf -> . pf IFF pf
    (68) pf -> . G pf
    (69) pf -> . F pf
    (70) pf -> . X pf
    (71) pf -> . pf U pf
    (72) pf -> . NOT pf
    (73) pf -> . LB pf RB

    NAME            shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    G               shift and go to state 19
    F               shift and go to state 20
    X               shift and go to state 21
    NOT             shift and go to state 22
    LB              shift and go to state 23

    pf                             shift and go to state 35

state 20

    (69) pf -> F . pf
    (61) pf -> . NAME
    (62) pf -> . TRUE
    (63) pf -> . FALSE
    (64) pf -> . pf OR pf
    (65) pf -> . pf AND pf
    (66) pf -> . pf IMPLIES pf
    (67) pf -> . pf IFF pf
    (68) pf -> . G pf
    (69) pf -> . F pf
    (70) pf -> . X pf
    (71) pf -> . pf U pf
    (72) pf -> . NOT pf
    (73) pf -> . LB pf RB

    NAME            shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    G               shift and go to state 19
    F               shift and go to state 20
    X               shift and go to state 21
    NOT             shift and go to state 22
    LB              shift and go to state 23

    pf                             shift and go to state 36

state 21

    (70) pf -> X . pf
    (61) pf -> . NAME
    (62) pf -> . TRUE
    (63) pf -> . FALSE
    (64) pf -> . pf OR pf
    (65) pf -> . pf AND pf
    (66) pf -> . pf IMPLIES pf
    (67) pf -> . pf IFF pf
    (68) pf -> . G pf
    (69) pf -> . F pf
    (70) pf -> . X pf
    (71) pf -> . pf U pf
    (72) pf -> . NOT pf
    (73) pf -> . LB pf RB

    NAME            shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    G               shift and go to state 19
    F               shift and go to state 20
    X               shift and go to state 21
    NOT             shift and go to state 22
    LB              shift and go to state 23

    pf                             shift and go to state 37

state 22

    (72) pf -> NOT . pf
    (61) pf -> . NAME
    (62) pf -> . TRUE
    (63) pf -> . FALSE
    (64) pf -> . pf OR pf
    (65) pf -> . pf AND pf
    (66) pf -> . pf IMPLIES pf
    (67) pf -> . pf IFF pf
    (68) pf -> . G pf
    (69) pf -> . F pf
    (70) pf -> . X pf
    (71) pf -> . pf U pf
    (72) pf -> . NOT pf
    (73) pf -> . LB pf RB

    NAME            shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    G               shift and go to state 19
    F               shift and go to state 20
    X               shift and go to state 21
    NOT             shift and go to state 22
    LB              shift and go to state 23

    pf                             shift and go to state 38

state 23

    (73) pf -> LB . pf RB
    (61) pf -> . NAME
    (62) pf -> . TRUE
    (63) pf -> . FALSE
    (64) pf -> . pf OR pf
    (65) pf -> . pf AND pf
    (66) pf -> . pf IMPLIES pf
    (67) pf -> . pf IFF pf
    (68) pf -> . G pf
    (69) pf -> . F pf
    (70) pf -> . X pf
    (71) pf -> . pf U pf
    (72) pf -> . NOT pf
    (73) pf -> . LB pf RB

    NAME            shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    G               shift and go to state 19
    F               shift and go to state 20
    X               shift and go to state 21
    NOT             shift and go to state 22
    LB              shift and go to state 23

    pf                             shift and go to state 39

state 24

    (7) payoff_list -> payoff_list payoff_tuple .

    DCOL            reduce using rule 7 (payoff_list -> payoff_list payoff_tuple .)
    PROPF           reduce using rule 7 (payoff_list -> payoff_list payoff_tuple .)
    PAYOFFS         reduce using rule 7 (payoff_list -> payoff_list payoff_tuple .)
    MODULE          reduce using rule 7 (payoff_list -> payoff_list payoff_tuple .)
    $end            reduce using rule 7 (payoff_list -> payoff_list payoff_tuple .)


state 25

    (8) payoff_tuple -> DCOL LB . NAME COMMA NAME COMMA NUMBER RB SEMICOLON
    (9) payoff_tuple -> DCOL LB . error COMMA NAME COMMA NUMBER RB SEMICOLON

    NAME            shift and go to state 40
    error           shift and go to state 41


state 26

    (10) var_y -> NAME .

    INIT            reduce using rule 10 (var_y -> NAME .)
    COMMA           reduce using rule 10 (var_y -> NAME .)


state 27

    (1) input -> MODULE NAME CONTROL var_y . INIT init_y UPDATE update_y GOAL goal_form
    (11) var_y -> var_y . COMMA var_y

    INIT            shift and go to state 42
    COMMA           shift and go to state 43


state 28

    (2) input -> MODULE ENVIRONMENT CONTROL var_y . INIT init_y UPDATE update_y
    (11) var_y -> var_y . COMMA var_y

    INIT            shift and go to state 44
    COMMA           shift and go to state 43


state 29

    (60) prop_form -> DCOL pf SEMICOLON .

    PROPF           reduce using rule 60 (prop_form -> DCOL pf SEMICOLON .)
    PAYOFFS         reduce using rule 60 (prop_form -> DCOL pf SEMICOLON .)
    MODULE          reduce using rule 60 (prop_form -> DCOL pf SEMICOLON .)
    $end            reduce using rule 60 (prop_form -> DCOL pf SEMICOLON .)


state 30

    (64) pf -> pf OR . pf
    (61) pf -> . NAME
    (62) pf -> . TRUE
    (63) pf -> . FALSE
    (64) pf -> . pf OR pf
    (65) pf -> . pf AND pf
    (66) pf -> . pf IMPLIES pf
    (67) pf -> . pf IFF pf
    (68) pf -> . G pf
    (69) pf -> . F pf
    (70) pf -> . X pf
    (71) pf -> . pf U pf
    (72) pf -> . NOT pf
    (73) pf -> . LB pf RB

    NAME            shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    G               shift and go to state 19
    F               shift and go to state 20
    X               shift and go to state 21
    NOT             shift and go to state 22
    LB              shift and go to state 23

    pf                             shift and go to state 45

state 31

    (65) pf -> pf AND . pf
    (61) pf -> . NAME
    (62) pf -> . TRUE
    (63) pf -> . FALSE
    (64) pf -> . pf OR pf
    (65) pf -> . pf AND pf
    (66) pf -> . pf IMPLIES pf
    (67) pf -> . pf IFF pf
    (68) pf -> . G pf
    (69) pf -> . F pf
    (70) pf -> . X pf
    (71) pf -> . pf U pf
    (72) pf -> . NOT pf
    (73) pf -> . LB pf RB

    NAME            shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    G               shift and go to state 19
    F               shift and go to state 20
    X               shift and go to state 21
    NOT             shift and go to state 22
    LB              shift and go to state 23

    pf                             shift and go to state 46

state 32
